[package]
edition = "2018"
name = "wgpu-renderer"
version = "0.1.0"
resolver = "2"

[dependencies]
anyhow = "1.0.43"
cgmath = "0.18.0"
env_logger = "0.9.0"
image = "0.23.14"
log = "0.4.14"
pollster = "0.2.4"
wgpu = "0.10.1"
winit = "0.25.0"

[dependencies.bytemuck]
features = ["derive"]
version = "1.7.2"
